# swm-pacs

./: CHANGELOG.md  Cargo.toml  README.md
pacs/swm341-pac/: Cargo.toml  device.x
pacs/swm341-pac/src/: adc0.rs  can0.rs  cordic.rs  crc.rs  dac.rs  div.rs  dma.rs  dma2d.rs  fmc.rs  gpioa.rs  i2c0.rs  jpeg.rs  lcd.rs  lib.rs  porta.rs  pwm0.rs  pwmg.rs  qei.rs  rtc.rs  sdio.rs  sdramc.rs  sfc.rs  spi0.rs  sys.rs  timr0.rs  timrg.rs  uart0.rs  usbd.rs  usbh.rs  wdt.rs
pacs/swm341-pac/src/adc0/: calib.rs  cr.rs  cr2.rs  go.rs  ie.rs  if_.rs  seq0.rs  seq1.rs  seq2.rs  seq3.rs  seqchn0.rs  seqchn1.rs  seqcov.rs  seqsmp.rs  seqtrg.rs
pacs/swm341-pac/src/can0/: acr.rs  afe.rs  afm.rs  alc.rs  amr.rs  bt0.rs  bt1.rs  bt2.rs  cmd.rs  cr.rs  ecc.rs  ewlim.rs  frame.rs  ie.rs  if_.rs  rmcnt.rs  rxerr.rs  sr.rs  txerr.rs
pacs/swm341-pac/src/cordic/: arctan.rs  cmd.rs  cos.rs  ie.rs  if_.rs  input.rs  sin.rs  tanh.rs
pacs/swm341-pac/src/crc/: cr.rs  datain.rs  inival.rs  result.rs
pacs/swm341-pac/src/dac/: cr.rs  dhr.rs  sr.rs  swtrg.rs
pacs/swm341-pac/src/div/: cr.rs  dividend.rs  divisor.rs  quo.rs  radicand.rs  remain.rs  root.rs  sr.rs
pacs/swm341-pac/src/dma/: ch0.rs  ch1.rs  ch2.rs  ch3.rs  dstsgie.rs  dstsgif.rs  dstsgim.rs  ie.rs  if_.rs  im.rs  pri.rs  srcsgie.rs  srcsgif.rs  srcsgim.rs
pacs/swm341-pac/src/dma2d/: cr.rs  ie.rs  if_.rs  l0.rs  l1.rs  l2.rs  nlr.rs
pacs/swm341-pac/src/fmc/: addr.rs  cache.rs  cfg0.rs  cfg1.rs  cfg2.rs  cfg3.rs  cfg4.rs  erase.rs  stat.rs
pacs/swm341-pac/src/gpioa/: datapin0.rs  datapin1.rs  datapin10.rs  datapin11.rs  (+23 more)
(+330 files in other folders)
