[workspace]
members = ["xtask", "pacs/*"]
default-members = ["xtask"]

[workspace.package]
name = "swm-pacs"
version = "0.2.0" 
keywords = ["no-std", "arm", "cortex-m", "swm", "synwit"]
license = "0BSD"
repository = "https://github.com/hysonglet/swm-pacs"
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
cortex-m = "0.7.3"
vcell = "0.1.3"
cortex-m-rt = ">=0.6.15,<0.8"

# meta-dependencies (upgrade as needed, they apply to all PACs):
# @svd2rust = 0.25.1
# @form = 0.10.0
